--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,11 @@
     <body>
         <div class="header">
             <div class="logo-container">
-                <img src="../text_logo.png" alt="ELO Logo" class="logo-image" />
+                <img
+                    src="../images/text_logo.png"
+                    alt="ELO Logo"
+                    class="logo-image"
+                />
             </div>
             <div class="nav-buttons">
                 <a href="info.html" class="nav-button" id="Info">Info</a>
